--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,39 @@
         app:layout_constraintBottom_toTopOf="@+id/keypadTableLayout"
         />
 
+    <TextView
+        android:id="@+id/expressionTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="44dp"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="end"
+        android:layout_marginStart="15dp"
+        android:text="1111 * 22"
+        android:layout_marginEnd="15dp"
+        app:layout_goneMarginStart="15dp"
+        android:textColor="@color/black"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:id="@+id/resultTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="end"
+        android:textSize="20sp"
+        android:textColor="#aaaaaa"
+        app:layout_constraintBottom_toTopOf="@+id/keypadTableLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        />
+
+
     <TableLayout
         android:id="@+id/keypadTableLayout"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +91,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonModulo"
                 android:background="@drawable/button_background"
                 android:text="%"
                 android:textColor="@color/green"
@@ -69,6 +103,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonDivider"
                 android:background="@drawable/button_background"
                 android:text="/"
                 android:textColor="@color/green"
@@ -84,6 +119,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button7"
                 android:background="@drawable/button_background"
                 android:text="7"
                 android:textSize="24sp"
@@ -94,6 +130,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button8"
                 android:background="@drawable/button_background"
                 android:text="8"
                 android:textColor="@color/textColor"
@@ -104,6 +141,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button9"
                 android:background="@drawable/button_background"
                 android:text="9"
                 android:textColor="@color/textColor"
@@ -115,6 +153,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMulti"
                 android:background="@drawable/button_background"
                 android:text="X"
                 android:textColor="@color/green"
@@ -132,6 +171,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button4"
                 android:background="@drawable/button_background"
                 android:text="4"
                 android:textSize="24sp"
@@ -142,6 +182,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button5"
                 android:background="@drawable/button_background"
                 android:text="5"
                 android:textColor="@color/textColor"
@@ -152,6 +193,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button6"
                 android:background="@drawable/button_background"
                 android:text="6"
                 android:textColor="@color/textColor"
@@ -163,6 +205,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMinus"
                 android:background="@drawable/button_background"
                 android:text="-"
                 android:textColor="@color/green"
@@ -180,6 +223,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button1"
                 android:background="@drawable/button_background"
                 android:text="1"
                 android:textSize="24sp"
@@ -190,6 +234,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button2"
                 android:background="@drawable/button_background"
                 android:text="2"
                 android:textColor="@color/textColor"
@@ -200,6 +245,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button3"
                 android:background="@drawable/button_background"
                 android:text="3"
                 android:textColor="@color/textColor"
@@ -211,6 +257,7 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonPlus"
                 android:background="@drawable/button_background"
                 android:text="+"
                 android:textColor="@color/green"
@@ -229,7 +276,6 @@
             <ImageButton
                 android:id="@+id/historyButton"
                 android:background="@drawable/button_background"
-                android:text="7"
                 android:textSize="24sp"
                 android:layout_margin="7dp"
                 android:stateListAnimator="@null"
@@ -239,8 +285,9 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button0"
                 android:background="@drawable/button_background"
-                android:text="8"
+                android:text="0"
                 android:textColor="@color/textColor"
                 android:textSize="24sp"
                 android:layout_margin="7dp"
@@ -250,7 +297,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:background="@drawable/button_background"
-                android:text="0"
+                android:text="."
                 android:textColor="@color/textColor"
                 android:textSize="24sp"
                 android:layout_margin="7dp"
@@ -261,10 +308,11 @@
                 android:layout_height="match_parent"/>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:background="@drawable/button_background"
+                android:id="@+id/resultButton"
+                android:background="@drawable/button_background_green"
                 android:text="="
                 android:onClick="resultButtonClicked"
-                android:textColor="@color/green"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:layout_margin="7dp"
                 android:stateListAnimator="@null"
@@ -275,5 +323,73 @@
 
 
     </TableLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/historyLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/keypadTableLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:textSize="28sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/closeButton"
+            android:onClick="closeHistoryButtonClicked"
+            android:text="닫기"
+            android:textColor="@color/black"
+            android:background="@null"
+            android:stateListAnimator="@null"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/closeButton"
+            app:layout_constraintBottom_toTopOf="@+id/historyClearButton"
+            android:layout_margin="10dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/historyLinearLayout"
+                android:orientation="vertical"/>
+
+
+        </ScrollView>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background_green"
+            android:stateListAnimator="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="38dp"
+            android:layout_marginStart="47dp"
+            app:layout_marginEnd="47dp"
+            android:text="계산 기록 삭제"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:id="@+id/historyClearButton"
+            android:onClick="historyClearButtonClicked"
+            />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
